@@ -1,0 +1,2 @@
+-- Create new column twitter_account_type_id 
+ALTER TABLE twitter_account ADD COLUMN twitter_account_type_id SMALLINT UNSIGNED NOT NULL;
